<resources>
    <string name="app_name">SIMPKD</string>
    <string name="app_name_description">Sistem Informasi Manajemen Pengelolaan \n Kendaraan Dinas</string>
    <string name="app_logo">Logo</string>
    <string name="login_title">UPTD PENGELOLAAN AIR LIMBAH DINAS PUPRKIM PROVINSI BALI</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="news">Berita Acara Kendaraan</string>
    <string name="letter_of_responsibility">Surat Tanggung Jawab</string>
    <string name="vehicle_maintenance">Pemeliharaan Kendaraan</string>
    <string name="task_order">Surat Perintah Tugas</string>
    <string name="nav_home">Home</string>
    <string name="nav_list">List Surat</string>
    <string name="nav_notification">Notifikasi</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_logout">Keluar</string>
    <string name="data_list_null">Tidak ditemukan surat dengan nama anda</string>
    <string name="data_notification_null">Tidak ada notifikasi untuk saat ini</string>
    <string name="unverified">Belum Diverifikasi</string>
    <string name="verified">Diverifikasi</string>
    <string name="back">Kembali</string>
    <string name="folder">Folder</string>
    <string name="avatar">Avatar</string>
    <string name="letter_number">Nomor Surat</string>
    <string name="usage_letter_number">Nomor Surat Penggunaan</string>
    <string name="handover_number">Nomor Surat Serah Terima</string>
    <string name="person_responsible">Penanggung Jawab</string>
    <string name="letter_date">Tanggal Surat</string>
    <string name="name">Nama</string>
    <string name="nik">NIK</string>
    <string name="position">Jabatan</string>
    <string name="address">Alamat</string>
    <string name="phone_number">No.HP</string>
    <string name="admin">Admin</string>
    <string name="vehicle">Kendaraan</string>
    <string name="vehicle_registration_number">Nomor Polisi</string>
    <string name="vehicle_brand">Merk Kendaraan</string>
    <string name="transportation_type">Jenis Kendaraan</string>
    <string name="vehicle_color">Warna Kendaraan</string>
    <string name="approve">Diterima</string>
    <string name="rejected">Ditolak</string>
    <string name="empty">Tidak ditemukan data pada bagian ini.\nData akan ditampilkan saat sudah tersedia</string>
    <string name="recipient_of_responsibility">Penerima Tanggung Jawab</string>
    <string name="giver_of_responsibility">Pemberi Tanggung Jawab</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="nip">NIP</string>
    <string name="save">Simpan</string>
    <string name="start_date">Tanggal Mulai</string>
    <string name="end_date">Tanggal Selesai</string>
    <string name="create_letter_of_task">Tambah Surat Perintah Tugas</string>
    <string name="giver_of_task">Pemberi Tugas</string>
    <string name="receiver_of_task">Penerima Tugas</string>
    <string name="usage_purpose">Tujuan Pemakaian</string>
    <string name="task_letter">Surat Tugas</string>
    <string name="dppa">DPPA</string>
    <string name="edit">Ubah Data</string>
    <string name="delete">Hapus Data</string>
    <string name="letter_status">Status Surat</string>
    <string name="kasubag_tu">Kasubag TU</string>
    <string name="maintenance_report">Laporan Pemeliharaan</string>
    <string name="maintenance_date">Tanggal Pemeliharaan</string>
    <string name="problem_type">Jenis Kerusakan</string>
    <string name="vehicle_total">Jumlah Kendaraan</string>
    <string name="description">Keterangan</string>
    <string name="add">Tambah</string>
    <string name="pptk">PPTK</string>
    <string name="kepala_upt">Kepala UPT</string>
    <string name="add_vehicle_maintenance">Tambah Data Pemeliharaan</string>
    <string name="all">Semua</string>
    <string name="create_new_password">Buat Password Baru</string>
    <string name="create_new_password_description">Password baru harus berbeda dari password sebelumnya</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="email_forgot_password">Masukkan e-mail anda untuk memulai proses lupa password</string>
    <string name="submit">Submit</string>
    <string name="kode_otp">Masukkan kode OTP untuk proses ubah password</string>
    <string name="otp">Kode OTP</string>
    <string name="new_password">Silahkan masukkan password terbaru yang anda inginkan</string>
</resources>