<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/chip_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:checked="true"
                style="@style/Widget.MaterialComponents.Chip.Choice" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:checked="true"
                style="@style/Widget.MaterialComponents.Chip.Choice" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_letter_of_responsibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_of_responsibility"
                android:checked="true"
                style="@style/Widget.MaterialComponents.Chip.Choice" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_vehicle_maintenance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_maintenance"
                android:checked="true"
                style="@style/Widget.MaterialComponents.Chip.Choice" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_task_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_order"
                android:checked="true"
                style="@style/Widget.MaterialComponents.Chip.Choice" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="148dp"
        app:layout_constraintTop_toBottomOf="@id/chip_container"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/empty_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/undraw_my_documents_re_13dc"
            android:contentDescription="@string/data_list_null"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_list_null"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingHorizontal="32dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>