<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/darker_gray"
    android:scrollbarThumbVertical="@null"
    tools:context=".activities.VehicleMaintenanceDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:contentDescription="@string/back"
                android:background="?selectableItemBackground"
                app:tint="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/maintenance_report"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:gravity="center" />

            <View
                android:layout_width="56dp"
                android:layout_height="56dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/letter_number"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textAllCaps="true" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/letter_number"
                android:textColor="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/letter_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/letter_date"
                android:textColor="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/letter_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_vehicle_maintenance"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="start|center_vertical"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="end"
            app:iconTint="@android:color/black"
            app:cornerRadius="24dp"
            app:backgroundTint="@android:color/white"
            style="@style/Widget.MaterialComponents.Button.Icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/letter_status"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kasubag_tu"
                    android:textColor="@android:color/black" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/kasubag_tu_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@android:color/white"
                    app:chipMinHeight="24dp"
                    app:ensureMinTouchTargetSize="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pptk"
                    android:textColor="@android:color/black" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/pptk_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@android:color/white"
                    app:chipMinHeight="24dp"
                    app:ensureMinTouchTargetSize="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kepala_upt"
                    android:textColor="@android:color/black" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/kepala_upt_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@android:color/white"
                    app:chipMinHeight="24dp"
                    app:ensureMinTouchTargetSize="false" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_approve_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.example.simpkd.components.SubmitButton
                android:id="@+id/btn_rejected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/rejected"
                app:cornerRadius="0dp"
                app:backgroundTint="@color/red" />

            <com.example.simpkd.components.SubmitButton
                android:id="@+id/btn_approved"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/approve"
                app:cornerRadius="0dp"
                app:backgroundTint="@color/green" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_action_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.example.simpkd.components.SubmitButton
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/delete"
                app:cornerRadius="0dp"
                app:backgroundTint="@color/red" />

            <com.example.simpkd.components.SubmitButton
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/edit"
                app:cornerRadius="0dp" />

        </LinearLayout>

        <com.example.simpkd.components.SubmitButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/save"
            app:cornerRadius="0dp" />

    </LinearLayout>

</ScrollView>